# Trieste

./: CMakeLists.txt
.github/workflows/: buildtest.yml
include/trieste/: regex_engine.h
ports/trieste/: portfile.cmake  usage  vcpkg.json
test/vcpkg-consumer/: CMakeLists.txt
